--- a/project/test.css
+++ b/project/test.css
@@ -49,7 +49,7 @@ padding: 150px 16px;
   top: 470px;
     transition: 0.5s;  
     font-size:27px; 
-    color:#7BE3DA
+    color:#7BE3DA;
    
   }
   .div_water_polution p
@@ -58,7 +58,7 @@ padding: 150px 16px;
     left:40px;
     top: 550px;
     font-size:18px;
-    text-align: left      ;
+    text-align: left ;
   }
   .div_water_polution a
   {
@@ -67,11 +67,11 @@ padding: 150px 16px;
     top: 670px;
     padding: 10px 20px;
     text-decoration: none;
-    border:2px solid ;
-    color: #5E8059;
+    color: black;
     transition: 0.5s;
     opacity:0;
     visibility: hidden;
+    border-radius: 12px;
   }
   .div_water_polution:hover a
 {
@@ -82,8 +82,8 @@ padding: 150px 16px;
 }
 .div_water_polution a:hover
 {
-    color:#5E8059;
-    background: #5E8059;
+    color:white;
+    background: #7BE3DA;
 }
   .div_pch
   {
@@ -124,9 +124,9 @@ top: 450px;
     top: 1100px;
     padding: 10px 20px;
     text-decoration: none;
-    border:2px solid ;
-    color: #5E8059;
+    color: white;
     transition: 0.5s;
+    border-radius: 12px;
     opacity:0;
     visibility: hidden;
   }
@@ -139,6 +139,6 @@ top: 450px;
 }
 .div_water_s a:hover
 {
-    color:#5E8059;
-    background: #5E8059;
+    color:black;
+    background: #7BE3DA;
 }
