--- a/project/water polution.css
+++ b/project/water polution.css
@@ -26,3 +26,27 @@ body {
     background-color: blue;
     color: white;
   }
+  div.main 
+  {
+    display:inline;
+    
+  }
+  div.polaroid {
+    width: 50%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 20px;
+    
+    display: absolute;
+    position: center;
+    
+  }
+  
+  div.container {
+    text-align: center;
+    padding: 10px 20px;
+    transition: 0.5s;  
+    font-size:27px; 
+    color:#7BE3DA;
+  }
+  
