--- a/project/index.css
+++ b/project/index.css
@@ -1,11 +1,13 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #7BE3DA;
   }
   
   .topnav {
     overflow: hidden;
     background-color:black;
+    border-radius: 5px;
   }
   
   .topnav a {
@@ -30,6 +32,7 @@ body {
   {
 background-image:url("p1.jpg") ;
 padding: 150px 16px;
+border-radius: 8px;
   }
   .div_start h1{
     overflow: hidden;
@@ -41,6 +44,8 @@ padding: 150px 16px;
   {
     padding: 180px 5px;
     max-width:100%;height:auto;
+    background-color: white;
+    border-radius: 8px;
   }
 .div_water_polution h3
 {
@@ -96,7 +101,8 @@ top: 450px;
   .div_water_s
   {
     padding: 180px 5px;
-    background-color: black;
+    background-image:url("p1.jpg") ;
+    border-radius: 8px;
   }
 .div_water_s h3
 {
@@ -105,7 +111,7 @@ top: 450px;
   top: 850px;
     transition: 0.5s;  
     font-size:27px; 
-    color:#7BE3DA
+    color:white;
    
   }
   .div_water_s p
