--- a/project/about us.css
+++ b/project/about us.css
@@ -6,6 +6,7 @@ body {
   .topnav {
     overflow: hidden;
     background-color:black;
+    border-radius: 8px;
   }
   
   .topnav a {
@@ -26,13 +27,10 @@ body {
     background-color: blue;
     color: white;
   }
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-  }
-  
+
   html {
     box-sizing: border-box;
+    border-radius: 8px;
   }
   
   *, *:before, *:after {
@@ -56,6 +54,7 @@ body {
     text-align: center;
     background-color: #474e5d;
     color: white;
+    border-radius: 8px;
   }
   
   .container {
