edit (main picture)

--- a/project/index.css
+++ b/project/index.css
@@ -31,7 +31,7 @@ body {
   }
   .div_start 
   {
-background-image:url("p1.jpg") ;
+background-image:url("main.jpg") ;
 padding: 150px 16px;
   }
   .div_start h1{
