--- a/project/about/about.css
+++ b/project/about/about.css
@@ -1,11 +1,11 @@
 body {font-family: Arial, Helvetica, sans-serif;
-background-color: dimgray;
+background-color: rgb(81, 130, 236);
 }
 
 
 .topnav {
   width: 100%;
-  background-color: #555;
+  background-color: rgb(0, 0, 0);
   overflow: auto;
   border-radius: 5px;
 }
@@ -19,7 +19,7 @@ background-color: dimgray;
 }
 
 .topnav a:hover {
-  background-color: grey;
+  background-color: rgb(0, 4, 255);
   transition: 0.3s;
 }
 
