--- a/project/water pollution/Types of water polution/Types of water polution.css
+++ b/project/water pollution/Types of water polution/Types of water polution.css
@@ -1,28 +1,47 @@
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color:black;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: blue;
+  color: white;
+}
+.div_c
+{
+  padding: 80px 16px;
+  background-color: white;
+
   
-  .topnav {
-    overflow: hidden;
-    background-color:black;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: blue;
-    color: white;
-  }
+}
+.h1
+{
+  color:#7BE3DA;
+}
+.div_c img
+{
+float:right;
+width:475px;
+height:auto;
+margin-top:15px;
+border-radius: 20px;
+}
