--- a/project/index.css
+++ b/project/index.css
@@ -1,255 +1,247 @@
-html {
-  scroll-behavior: smooth;
+html{
+  scroll-behavior:smooth;
 }
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #7BE3DA;
-  }
-  
-  .topnav {
-    overflow: hidden;
-    background-color:black;
-    border-radius: 5px;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-    transition: 0.5s;
-  }
-  
-  .topnav a.active {
-    background-color: blue;
-    color: white;
-  }
-  .div_start 
-  {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #7BE3DA;
+}
+
+.topnav {
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  overflow: auto;
+  border-radius: 5px;
+}
+
+.topnav a {
+  float: left;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a.active {
+  background-color: gray;
+  color: white;
+}
+
+.topnav a.active {
+  background-color: gray;
+  color: white;
+}
+.div_start 
+{
 background-image:url("main.jpg") ;
 padding: 150px 16px;
-  }
-  .div_start h1{
-    overflow: hidden;
-    font-size:35px; 
-    color:white;
-    float:middle;                   
-  }
-  .div_water_polution
-  {
-    padding: 180px 5px;
-    max-width:100%;height:auto;
-    background-color: white;
-    border-radius: 5px;
-  }
+}
+.div_water_polution
+{
+  padding: 180px 5px;
+  max-width:100%;height:auto;
+  background-color: white;
+  border-radius: 5px;
+}
 .div_water_polution h3
+{
+position: absolute;
+left:40px;
+top: 470px;
+  transition: 0.5s;  
+  font-size:27px; 
+  color:#7BE3DA;
+ 
+}
+.div_water_polution p
 {
   position: absolute;
   left:40px;
-  top: 470px;
-    transition: 0.5s;  
-    font-size:27px; 
-    color:#7BE3DA;
-   
-  }
-  .div_water_polution p
-  {
-    position: absolute;
-    left:40px;
-    top: 550px;
-    font-size:18px;
-    text-align: left ;
-  }
-  .div_water_polution a
-  {
-    position: absolute;
-    left:700px;
-    top: 670px;
-    padding: 10px 20px;
-    text-decoration: none;
-    color: black;
-    transition: 0.5s;
-    opacity:0;
-    visibility: hidden;
-    border-radius: 8px;
-  }
-  .div_water_polution:hover a
+  top: 550px;
+  font-size:18px;
+  text-align: left ;
+}
+.div_water_polution a
 {
-    
-    transform: translateY(0);
-    opacity:1;
-    visibility: visible;
+  position: absolute;
+  left:700px;
+  top: 670px;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: black;
+  transition: 0.5s;
+  opacity:0;
+  visibility: hidden;
+  border-radius: 8px;
+}
+.div_water_polution:hover a
+{
+  
+  transform: translateY(0);
+  opacity:1;
+  visibility: visible;
 }
 .div_water_polution a:hover
 {
-    color:white;
-    background: #7BE3DA;
+  color:white;
+  background: #7BE3DA;
 }
-  .div_pch
-  {
+.div_pch
+{
 
 position: absolute;
 left:880px;
 top: 450px;
 
-  }
-  .div_water_s
-  {
-    padding: 180px 5px;
-    background-image:url("p1.jpg");
-    border-radius: 5px;
-  }
+}
+.div_water_s
+{
+  padding: 180px 5px;
+  background-image:url("p1.jpg");
+  border-radius: 5px;
+}
 .div_water_s h3
+{
+position: absolute;
+left:40px;
+top: 850px;
+  transition: 0.5s;  
+  font-size:27px; 
+  color:black;
+ 
+}
+.div_water_s p
 {
   position: absolute;
   left:40px;
-  top: 850px;
-    transition: 0.5s;  
-    font-size:27px; 
-    color:black;
-   
-  }
-  .div_water_s p
-  {
-    position: absolute;
-    left:40px;
-    top: 950px;
-    font-size:18px;
-    text-align: left;  
-    color:black  ;
-  }
-  .div_water_s a
-  {
-    position: absolute;
-    left:700px;
-    top: 1100px;
-    padding: 10px 20px;
-    text-decoration: none;
-    color: black;
-    transition: 0.5s;
-    border-radius: 12px;
-    opacity:0;
-    visibility: hidden;
-  }
-  .div_water_s:hover a
+  top: 950px;
+  font-size:18px;
+  text-align: left;  
+  color:black  ;
+}
+.div_water_s a
 {
-    
-    transform: translateY(0);
-    opacity:1;
-    visibility: visible;
+  position: absolute;
+  left:700px;
+  top: 1100px;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: black;
+  transition: 0.5s;
+  border-radius: 12px;
+  opacity:0;
+  visibility: hidden;
+}
+.div_water_s:hover a
+{
+  
+  transform: translateY(0);
+  opacity:1;
+  visibility: visible;
 }
 .div_water_s a:hover
 {
-    color:black;
-    background: #7BE3DA;
+  color:black;
+  background: #7BE3DA;
 }
 .div_wind_pollution
 {
-  padding: 180px 5px;
-  background-color:white;
-  border-radius: 5px;
+padding: 180px 5px;
+background-color:white;
+border-radius: 5px;
 }
 .div_wind_pollution h3
 {
 position: absolute;
 left:40px;
 top: 1200px;
-  transition: 0.5s;  
-  font-size:27px; 
-  color:black;
- 
+transition: 0.5s;  
+font-size:27px; 
+color:black;
+
 }
 .div_wind_pollution p
 {
-  position: absolute;
-  left:40px;
-  top: 1300px;
-  font-size:18px;
-  text-align: left;  
-  color:black  ;
+position: absolute;
+left:40px;
+top: 1300px;
+font-size:18px;
+text-align: left;  
+color:black  ;
 }
 .div_wind_pollution a
 {
-  position: absolute;
-  left:700px;
-  top: 1400px;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: black;
-  transition: 0.5s;
-  border-radius: 12px;
-  opacity:0;
-  visibility: hidden;
+position: absolute;
+left:700px;
+top: 1400px;
+padding: 10px 20px;
+text-decoration: none;
+color: black;
+transition: 0.5s;
+border-radius: 12px;
+opacity:0;
+visibility: hidden;
 }
 .div_wind_pollution:hover a
 {
-  
-  transform: translateY(0);
-  opacity:1;
-  visibility: visible;
+
+transform: translateY(0);
+opacity:1;
+visibility: visible;
 }
 .div_wind_pollution a:hover
 {
-  color:white;
-  background: #7BE3DA;
+color:white;
+background: #7BE3DA;
 } 
 .div_wind_s
 {
-  padding: 180px 5px;
-  background-image:url("p1.jpg");
-  border-radius: 5px;
-  }
+padding: 180px 5px;
+background-image:url("p1.jpg");
+border-radius: 5px;
+}
 
 .div_wind_s h3
 {
 position: absolute;
 left:40px;
 top: 1550px;
-  transition: 0.5s;  
-  font-size:27px; 
-  color:black;
- 
+transition: 0.5s;  
+font-size:27px; 
+color:black;
+
 }
 .div_wind_s p
 {
-  position: absolute;
-  left:40px;
-  top: 1650px;
-  font-size:18px;
-  text-align: left;  
-  color:black  ;
+position: absolute;
+left:40px;
+top: 1650px;
+font-size:18px;
+text-align: left;  
+color:black  ;
 }
 .div_wind_s a
 {
-  position: absolute;
-  left:700px;
-  top: 1800px;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: black;
-  transition: 0.5s;
-  border-radius: 12px;
-  opacity:0;
-  visibility: hidden;
+position: absolute;
+left:700px;
+top: 1800px;
+padding: 10px 20px;
+text-decoration: none;
+color: black;
+transition: 0.5s;
+border-radius: 12px;
+opacity:0;
+visibility: hidden;
 }
 .div_wind_s:hover a
 {
-  
-  transform: translateY(0);
-  opacity:1;
-  visibility: visible;
+
+transform: translateY(0);
+opacity:1;
+visibility: visible;
 }
 .div_wind_s a:hover
 {
-  color:black;
-  background: #7BE3DA;
+color:black;
+background: #7BE3DA;
 }
 
