--- a/project/water pollution/Couses of water polution/Couses of water polution.css
+++ b/project/water pollution/Couses of water polution/Couses of water polution.css
@@ -4,56 +4,72 @@ body {
   }
   
   .topnav {
-    overflow: hidden;
-    background-color:black;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    overflow: auto;
+    border-radius: 5px;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
+    padding: 12px;
+    color: white;
     text-decoration: none;
     font-size: 17px;
   }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+  .topnav a.active {
+    background-color: gray;
+    color: white;
   }
   
   .topnav a.active {
-    background-color: blue;
+    background-color: gray;
     color: white;
   }
-  .div_c
-  {
-    padding: 150px 16px;
-    background-color: white;
-    display: absolute;
-    
+  div.gallery {
+    border: 1px solid #ccc;
   }
-  .div_c h1
-  {
-    overflow: hidden;
-    font-size:35px; 
-    color:#7BE3DA;
-    float:left; 
+  
+  div.gallery:hover {
+    border: 1px solid #777;
   }
-  .div_c p
-  { position: absolute;
-    left:40px;
-    top: 550px;
-    font-size:18px;
-    text-align: left ;
-
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
   }
-  .div_img
-  {
-float:right;
-width:100%;
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
   }
- .h1
- {
-   background-color: ;
- }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  .responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+    margin-top: 75px;
+  }
+  
+  @media only screen and (max-width: 800px) {
+    .responsive {
+      width: 49.99999%;
+      margin: 6px 0;
+    }
+  }
+  
+  @media only screen and (max-width: 500px) {
+    .responsive {
+      width: 100%;
+    }
+  }
+  
+  .clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
