--- a/project/water pollution/Types of water polution/Types of water polution.css
+++ b/project/water pollution/Types of water polution/Types of water polution.css
@@ -3,37 +3,39 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 .topnav {
-  overflow: hidden;
-  background-color:black;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  overflow: auto;
+  border-radius: 5px;
 }
 
 .topnav a {
   float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  padding: 12px;
+  color: white;
   text-decoration: none;
   font-size: 17px;
 }
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.topnav a.active {
+  background-color: gray;
+  color: white;
 }
 
 .topnav a.active {
-  background-color: blue;
+  background-color: gray;
   color: white;
 }
 .div_c
 {
-  padding: 80px 16px;
+  padding: 40px 16px;
   background-color: white;
-
+  border-radius: 20px;
   
 }
-.h1
+.div_c h1
 {
   color:#7BE3DA;
 }
@@ -43,5 +45,42 @@ float:right;
 width:475px;
 height:auto;
 margin-top:15px;
-border-radius: 20px;
+border-radius: 10px;
 }
+.div_c2 
+{
+  padding: 50px 16px;
+  border-radius: 20px;
+  background-color: gray;
+}
+
+.div_c2 img
+{
+float:left;
+width:400px;
+height:auto;
+margin-top:5px;
+margin-right:20px;
+border-radius: 20px;
+
+}
+.div_c3
+{
+  padding: 100px 16px;
+  background-color: white;
+  border-radius: 20px;
+  
+}
+.div_c3 h1
+{
+  color:#7BE3DA;
+}
+.div_c3 img
+{
+float:right;
+width:475px;
+height:auto;
+margin-top:-45px;
+border-radius: 10px;
+}
+
