--- a/project/water pollution/water polution.css
+++ b/project/water pollution/water polution.css
@@ -2,28 +2,27 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
-  
   .topnav {
-    overflow: hidden;
-    background-color:black;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    overflow: auto;
+    border-radius: 5px;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
+    padding: 12px;
+    color: white;
     text-decoration: none;
     font-size: 17px;
   }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+  .topnav a.active {
+    background-color: gray;
+    color: white;
   }
   
   .topnav a.active {
-    background-color: blue;
+    background-color: gray;
     color: white;
   }
   div.main 
