--- a/project/about/about.css
+++ b/project/about/about.css
@@ -17,14 +17,14 @@ background-color: rgb(81, 130, 236);
   text-decoration: none;
   font-size: 17px;
 }
-
-.topnav a:hover {
-  background-color: rgb(0, 4, 255);
-  transition: 0.3s;
+.topnav a.active {
+  background-color: gray;
+  color: white;
 }
 
-.active {
-  background-color:grey;
+.topnav a.active {
+  background-color: gray;
+  color: white;
 }
 
 @media screen and (max-width: 480px) {
