--- a/project/water pollution/Couses of water polution/Couses of water polution.css
+++ b/project/water pollution/Couses of water polution/Couses of water polution.css
@@ -28,6 +28,9 @@ body {
   }
   div.gallery {
     border: 1px solid #ccc;
+    border-radius:5px ;
+      box-shadow: 2.5px 5px #888888;
+    }
   }
   
   div.gallery:hover {
@@ -42,6 +45,8 @@ body {
   div.desc {
     padding: 15px;
     text-align: center;
+    border-radius:5px ;
+    box-shadow: 2.5px 5px #888888;
   }
   
   * {
