--- a/project/water saving/water saving.css
+++ b/project/water saving/water saving.css
@@ -6,6 +6,7 @@ body {
   .topnav {
     overflow: hidden;
     background-color:black;
+    border-radius: 5px;
   }
   
   .topnav a {
@@ -23,6 +24,6 @@ body {
   }
   
   .topnav a.active {
-    background-color: blue;
+    background-color:gray;
     color: white;
   }
