--- a/project/water pollution/Types of water polution/Types of water polution.css
+++ b/project/water pollution/Types of water polution/Types of water polution.css
@@ -37,7 +37,7 @@ body {
 }
 .div_c h1
 {
-  color:#7BE3DA;
+  color:gray;
 }
 .div_c img
 {
@@ -73,7 +73,7 @@ border-radius: 20px;
 }
 .div_c3 h1
 {
-  color:#7BE3DA;
+  color:gray;
 }
 .div_c3 img
 {
