--- a/project/index.css
+++ b/project/index.css
@@ -37,7 +37,7 @@ body {
 background-image:url("main.jpg") ;
 padding: 150px 16px;
 border-radius: 20px;
-width:95%;
+width:97%;
 margin:auto;
 margin-bottom:15px;
 }
@@ -46,14 +46,14 @@ margin-bottom:15px;
   padding: 100px 16px;
   background-color: white;
   border-radius: 20px;
-  width:95%;
+  width:97%;
   margin:auto;
   margin-bottom:15px;
   
 }
 .div_c h1
 {
-  color:#7BE3DA;
+  color:gray;
 }
 .div_c img
 {
@@ -61,6 +61,7 @@ float:right;
 width:475px;
 height:auto;
 border-radius: 10px;
+margin-left:15px;
 }
 .div_c a
 {
@@ -91,14 +92,14 @@ border-radius: 10px;
   padding: 100px 16px;
   background-image:url("p1.jpg");
   border-radius: 20px;
-   width:95%;
+   width:97%;
   margin:auto;
   margin-bottom:15px;
   
 }
 .div_c2 h1
 {
-  color:#7BE3DA;
+  color:gray;
 }
 .div_c2 img
 {
@@ -138,14 +139,14 @@ margin-right:30px;
   padding: 100px 16px;
   background-color: white;
   border-radius: 20px;
-  width:95%;
+  width:97%;
   margin:auto;
   margin-bottom:15px;
   
 }
 .div_c3 h1
 {
-  color:#7BE3DA;
+  color:gray;
 }
 .div_c3 img
 {
@@ -153,6 +154,8 @@ float:right;
 width:475px;
 height:auto;
 border-radius: 10px;
+margin-top:-40px;
+margin-left:15px;
 }
 .div_c3 a
 {
@@ -183,14 +186,14 @@ border-radius: 10px;
   padding: 100px 16px;
   background-image:url("p1.jpg");
   border-radius: 20px;
-  width:95%;
+  width:97%;
   margin:auto;
   margin-bottom:15px;
   
 }
 .div_c4 h1
 {
-  color:#7BE3DA;
+  color:gray;
 }
 .div_c4 img
 {
