--- a/project/water pollution/water polution.css
+++ b/project/water pollution/water polution.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior:smooth;
+}
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -51,5 +54,5 @@ body {
   div.container a
   {
 text-decoration: none;
-color:#7BE3DA;
+color:Black;
   }
